--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="">WebStudio</a>
+        <a href="">Agencja</a>
+        <a href="">Portfolio</a>
+        <a href="">Kontakt</a>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+    </header>
+    <main>
+      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <button type="button">Zamów usługę</button>
+    </main>
+    <section class="Lorem_ipsum">
+      <h3>Lorem ipsum</h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
+      Sed non sodales dui. Interdum et malesuada
+      <h3>Lorem ipsum</h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
+      Sed non sodales dui. Interdum et malesuada
+      <h3>Lorem ipsum</h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
+      Sed non sodales dui. Interdum et malesuada
+      <h3>Lorem ipsum</h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
+      Sed non sodales dui. Interdum et malesuada
+    </section>
+    <div>
+      <h2>Czym się zajmujemy</h2>
+      <img src="" />
+      <img src="" />
+      <img src="" />
+    </div>
+    <section>
+      <h2>Nasz zespół</h2>
+      <figure class="team_card">
+        <img src="" alt="" />
+        <figcaption>John Doe Product designer</figcaption>
+        <img src="" alt="" />
+        <figcaption>John Doe Frontend Developer</figcaption>
+        <img src="John Doe" alt="" />
+        <figcaption>John Doe Marketing</figcaption>
+        <img src="" alt="" />
+        <figcaption>John Doe UI Designer</figcaption>
+      </figure>
+    </section>
+
+    <footer>
+      <address class="footer_addr">
+        <a>WebStudio</a>
+        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+        <a href="mailto:info@example.com" target="_blank">info@example.com</a>
+        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      </address>
+    </footer>
+  </body>
 </html>
