--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="">Kontakt</a>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      <a href="tel:+48 111 111 111">+48111111111</a>
     </header>
     <main>
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
@@ -37,22 +37,21 @@
     </section>
     <div>
       <h2>Czym się zajmujemy</h2>
-      <img src="" />
-      <img src="" />
-      <img src="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
     </div>
     <section>
       <h2>Nasz zespół</h2>
-      <figure class="team_card">
-        <img src="" alt="" />
-        <figcaption>John Doe Product designer</figcaption>
-        <img src="" alt="" />
-        <figcaption>John Doe Frontend Developer</figcaption>
-        <img src="John Doe" alt="" />
-        <figcaption>John Doe Marketing</figcaption>
-        <img src="" alt="" />
-        <figcaption>John Doe UI Designer</figcaption>
-      </figure>
+
+      <img src="" alt="" />
+      John Doe Product designer
+      <img src="" alt="" />
+      John Doe Frontend Developer
+      <img src="" alt="" />
+      John Doe Marketing
+      <img src="" alt="" />
+      John Doe UI Designer
     </section>
 
     <footer>
@@ -60,7 +59,7 @@
         <a>WebStudio</a>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
         <a href="mailto:info@example.com" target="_blank">info@example.com</a>
-        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+        <a href="tel:+48 111 111 111">+48111111111</a>
       </address>
     </footer>
   </body>
