--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="">Kontakt</a>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48 111 111 111">+48111111111</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
@@ -59,7 +59,7 @@
         <a>WebStudio</a>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
         <a href="mailto:info@example.com" target="_blank">info@example.com</a>
-        <a href="tel:+48 111 111 111">+48111111111</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
