--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="" alt="" />
       John Doe Marketing
       <img src="" alt="" />
-      John Doe UI Designer
+      John Doe UI Designer b
     </section>
 
     <footer>
