--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     </section>
     <div>
       <h2>Czym się zajmujemy</h2>
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
+      <img src="images/img_1.jpg" alt="hands on keyboard" />
+      <img src="images/img_2.jpg" alt="mobile in hands" />
+      <img src="images/img_3.jpg" alt="colorful picture in mobile" />
     </div>
     <section>
       <h2>Nasz zespół</h2>
 
-      <img src="" alt="" />
+      <img src="images/team_1.jpg" alt="happy man" />
       John Doe Product designer
-      <img src="" alt="" />
+      <img src="images/team_2.jpg" alt="happy women in a suit" />
       John Doe Frontend Developer
-      <img src="" alt="" />
+      <img src="images/team_3.jpg" alt="" />
       John Doe Marketing
-      <img src="" alt="" />
+      <img src="images/team_4.jpg" alt="" />
       John Doe UI Designer b
     </section>
 
