--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Studio</title>
   </head>
   <body>
     <header>
@@ -21,39 +21,63 @@
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
     </main>
-    <section class="Lorem_ipsum">
-      <h3>Lorem ipsum</h3>
+    <article class="Lorem_ipsum">
+      <h4>Lorem ipsum</h4>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
       Sed non sodales dui. Interdum et malesuada
-      <h3>Lorem ipsum</h3>
+      <h4>Lorem ipsum</h4>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
       Sed non sodales dui. Interdum et malesuada
-      <h3>Lorem ipsum</h3>
+      <h4>Lorem ipsum</h4>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
       Sed non sodales dui. Interdum et malesuada
-      <h3>Lorem ipsum</h3>
+      <h4>Lorem ipsum</h4>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
       Sed non sodales dui. Interdum et malesuada
-    </section>
-    <div>
-      <h2>Czym się zajmujemy</h2>
-      <img src="images/img_1.jpg" alt="hands on keyboard" />
-      <img src="images/img_2.jpg" alt="mobile in hands" />
-      <img src="images/img_3.jpg" alt="colorful picture in mobile" />
-    </div>
-    <section>
-      <h2>Nasz zespół</h2>
 
-      <img src="images/team_1.jpg" alt="happy man" />
-      John Doe Product designer
-      <img src="images/team_2.jpg" alt="happy women in a suit" />
-      John Doe Frontend Developer
-      <img src="images/team_3.jpg" alt="" />
-      John Doe Marketing
-      <img src="images/team_4.jpg" alt="" />
-      John Doe UI Designer b
-    </section>
+      <figure>
+        <figcaption><h2>Czym się zajmujemy</h2></figcaption>
+        <img
+          src="images/img_1.jpg"
+          alt="hands on keyboard"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images/img_2.jpg"
+          alt="mobile in hands"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images/img_3.jpg"
+          alt="colorful picture in mobile"
+          width="370"
+          height="294"
+        />
+      </figure>
+      <section>
+        <h2>Nasz zespół</h2>
 
+        <img src="images/team_1.jpg" alt="happy man" width="270" height="260" />
+        <p>John Doe</p>
+        <p>Product designer</p>
+        <img
+          src="images/team_2.jpg"
+          alt="happy women in a suit"
+          width="270"
+          height="260"
+        />
+        <p>John Doe</p>
+        <p>Frontend Developer</p>
+        <img src="images/team_3.jpg" alt="" width="270" height="260" />
+        <p>John Doe</p>
+        <p>Marketing</p>
+        <img src="images/team_4.jpg" alt="" width="270" height="260" />
+        <p>John Doe</p>
+        <p>UI Designer</p>
+      </section>
+    </article>
     <footer>
       <address class="footer_addr">
         <a>WebStudio</a>
