--- a/index.html
+++ b/index.html
@@ -7,84 +7,128 @@
     <title>Studio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">WebStudio</a>
-        <a href="">Agencja</a>
-        <a href="">Portfolio</a>
-        <a href="">Kontakt</a>
-      </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
-    </header>
-    <main>
-      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <button type="button">Zamów usługę</button>
-    </main>
-    <article class="Lorem_ipsum">
-      <h4>Lorem ipsum</h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-      Sed non sodales dui. Interdum et malesuada
-      <h4>Lorem ipsum</h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-      Sed non sodales dui. Interdum et malesuada
-      <h4>Lorem ipsum</h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-      Sed non sodales dui. Interdum et malesuada
-      <h4>Lorem ipsum</h4>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-      Sed non sodales dui. Interdum et malesuada
-
-      <figure>
-        <figcaption><h2>Czym się zajmujemy</h2></figcaption>
-        <img
-          src="images/img_1.jpg"
-          alt="hands on keyboard"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img_2.jpg"
-          alt="mobile in hands"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img_3.jpg"
-          alt="colorful picture in mobile"
-          width="370"
-          height="294"
-        />
-      </figure>
-      <section>
-        <h2>Nasz zespół</h2>
-
-        <img src="images/team_1.jpg" alt="happy man" width="270" height="260" />
-        <p>John Doe</p>
-        <p>Product designer</p>
-        <img
-          src="images/team_2.jpg"
-          alt="happy women in a suit"
-          width="270"
-          height="260"
-        />
-        <p>John Doe</p>
-        <p>Frontend Developer</p>
-        <img src="images/team_3.jpg" alt="" width="270" height="260" />
-        <p>John Doe</p>
-        <p>Marketing</p>
-        <img src="images/team_4.jpg" alt="" width="270" height="260" />
-        <p>John Doe</p>
-        <p>UI Designer</p>
-      </section>
-    </article>
-    <footer>
-      <address class="footer_addr">
-        <a>WebStudio</a>
-        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a href="mailto:info@example.com" target="_blank">info@example.com</a>
+    <div class="wrapper">
+      <header>
+        <nav>
+          <a href="">WebStudio</a>
+          <a href="">Agencja</a>
+          <a href="">Portfolio</a>
+          <a href="">Kontakt</a>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+48111111111">+48 111 111 111</a>
-      </address>
-    </footer>
+      </header>
+      <main>
+        <div class="main_block">
+          <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button type="button">Zamów usługę</button>
+        </div>
+        <article class="informations">
+          <ul>
+            <li><h4>Lorem ipsum</h4></li>
+            <li>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li><h4>Lorem ipsum</h4></li>
+            <li>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li><h4>Lorem ipsum</h4></li>
+            <li>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li><h4>Lorem ipsum</h4></li>
+            <li>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+          <figure>
+            <figcaption><h2>Czym się zajmujemy</h2></figcaption>
+            <img
+              src="images/img_1.jpg"
+              alt="hands on keyboard"
+              width="370"
+              height="294"
+            />
+            <img
+              src="images/img_2.jpg"
+              alt="mobile in hands"
+              width="370"
+              height="294"
+            />
+            <img
+              src="images/img_3.jpg"
+              alt="colorful picture in mobile"
+              width="370"
+              height="294"
+            />
+          </figure>
+        </article>
+        <section class="team_section">
+          <ul>
+            <li><h2>Nasz zespół</h2></li>
+
+            <li>
+              <img
+                src="images/team_1.jpg"
+                alt="happy man"
+                width="270"
+                height="260"
+              />
+              <h5>John Doe</h5>
+              <p>Product designer</p>
+            </li>
+            <li>
+              <img
+                src="images/team_2.jpg"
+                alt="happy women in a suit"
+                width="270"
+                height="260"
+              />
+              <h5>John Doe</h5>
+              <p>Frontend Developer</p>
+            </li>
+            <li>
+              <img src="images/team_3.jpg" alt="" width="270" height="260" />
+              <h5>John Doe</h5>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src="images/team_4.jpg" alt="" width="270" height="260" />
+              <h5>John Doe</h5>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer>
+        <p>
+          <a>WebStudio</a>
+        </p>
+        <address>
+          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+          <p>
+            <a href="mailto:info@example.com" target="_blank"
+              >info@example.com</a
+            >
+          </p>
+          <p>
+            <a href="tel:+48111111111">+48 111 111 111</a>
+          </p>
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
