--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="menu_nav">
         <nav>
           <a href="">WebStudio</a>
           <a href="">Agencja</a>
           <a href="">Portfolio</a>
           <a href="">Kontakt</a>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <div class="menu_contacts">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+48111111111">+48 111 111 111</a>
+        </div>
       </header>
       <main>
         <div class="main_block">
@@ -64,13 +66,13 @@
             />
             <img
               src="images/img_2.jpg"
-              alt="mobile in hands"
+              alt="smartphone in hands"
               width="370"
               height="294"
             />
             <img
               src="images/img_3.jpg"
-              alt="colorful picture in mobile"
+              alt="creating image on smartphone"
               width="370"
               height="294"
             />
@@ -93,7 +95,7 @@
             <li>
               <img
                 src="images/team_2.jpg"
-                alt="happy women in a suit"
+                alt="happy women"
                 width="270"
                 height="260"
               />
@@ -101,12 +103,22 @@
               <p>Frontend Developer</p>
             </li>
             <li>
-              <img src="images/team_3.jpg" alt="" width="270" height="260" />
+              <img
+                src="images/team_3.jpg"
+                alt="happy men"
+                width="270"
+                height="260"
+              />
               <h5>John Doe</h5>
               <p>Marketing</p>
             </li>
             <li>
-              <img src="images/team_4.jpg" alt="" width="270" height="260" />
+              <img
+                src="images/team_4.jpg"
+                alt="serious man"
+                width="270"
+                height="260"
+              />
               <h5>John Doe</h5>
               <p>UI Designer</p>
             </li>
@@ -115,7 +127,7 @@
       </main>
       <footer>
         <p>
-          <a>WebStudio</a>
+          <a href="">WebStudio</a>
         </p>
         <address>
           <p>m. Warszawa, Aleje Jerozolimskie 21</p>
