--- a/index.html
+++ b/index.html
@@ -25,59 +25,68 @@
           <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button">Zamów usługę</button>
         </div>
-        <article class="informations">
+        <section class="informations">
           <ul>
-            <li><h4>Lorem ipsum</h4></li>
             <li>
+              <h3>Lorem ipsum</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li><h4>Lorem ipsum</h4></li>
             <li>
+              <h3>Lorem ipsum</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li><h4>Lorem ipsum</h4></li>
             <li>
+              <h3>Lorem ipsum</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li><h4>Lorem ipsum</h4></li>
             <li>
+              <h3>Lorem ipsum</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
           </ul>
-          <figure>
-            <figcaption><h2>Czym się zajmujemy</h2></figcaption>
-            <img
-              src="images/img_1.jpg"
-              alt="hands on keyboard"
-              width="370"
-              height="294"
-            />
-            <img
-              src="images/img_2.jpg"
-              alt="smartphone in hands"
-              width="370"
-              height="294"
-            />
-            <img
-              src="images/img_3.jpg"
-              alt="creating image on smartphone"
-              width="370"
-              height="294"
-            />
-          </figure>
-        </article>
+        </section>
+        <section>
+          <ul>
+            <li><h2>Czym się zajmujemy</h2></li>
+            <li>
+              <img
+                src="images/img_1.jpg"
+                alt="hands on keyboard"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/img_2.jpg"
+                alt="smartphone in hands"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/img_3.jpg"
+                alt="creating image on smartphone"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </section>
+
         <section class="team_section">
           <ul>
             <li><h2>Nasz zespół</h2></li>
