--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <header class="menu_nav">
         <nav>
-          <a href="">WebStudio</a>
+          <a href=""><span>Web</span>Studio</a>
           <a href="">Agencja</a>
           <a href="">Portfolio</a>
           <a href="">Kontakt</a>
@@ -136,7 +136,7 @@
       </main>
       <footer>
         <p>
-          <a href="">WebStudio</a>
+          <a href=""><span>Web</span>Studio</a>
         </p>
         <address>
           <p>m. Warszawa, Aleje Jerozolimskie 21</p>
