--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
   <body>
     <div class="wrapper">
       <header class="menu_nav">
+        <a href=""><span>Web</span>Studio</a>
         <nav>
-          <a href=""><span>Web</span>Studio</a>
-          <a href="">Agencja</a>
-          <a href="">Portfolio</a>
-          <a href="">Kontakt</a>
+          <ul>
+            <li><a href="">Agencja</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Kontakt</a></li>
+          </ul>
         </nav>
         <div class="menu_contacts">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+48111111111">+48 111 111 111</a>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          </ul>
         </div>
       </header>
       <main>
@@ -139,15 +143,23 @@
           <a href=""><span>Web</span>Studio</a>
         </p>
         <address>
-          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-          <p>
-            <a href="mailto:info@example.com" target="_blank"
-              >info@example.com</a
-            >
-          </p>
-          <p>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-          </p>
+          <ul>
+            <li>
+              <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+            </li>
+            <li>
+              <p>
+                <a href="mailto:info@example.com" target="_blank"
+                  >info@example.com</a
+                >
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="tel:+48111111111">+48 111 111 111</a>
+              </p>
+            </li>
+          </ul>
         </address>
       </footer>
     </div>
