--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </ul>
         </section>
 
-        <section class="team_section">
+        <section>
           <ul>
             <li><h2>Nasz zespół</h2></li>
 
