--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </ul>
       </section>
       <section>
+        <h2>Czym się zajmujemy</h2>
         <ul>
-          <li><h2>Czym się zajmujemy</h2></li>
           <li>
             <img
               src="images/img_1.jpg"
@@ -87,7 +87,6 @@
           </li>
         </ul>
       </section>
-
       <section class="our_team">
         <h2>Nasz zespół</h2>
         <ul>
