--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Studio</title>
   </head>
   <body>
-    <header class="menu_nav">
+    <header class="menu-nav">
       <a href="./index.html"><span>Web</span>Studio</a>
       <nav>
         <ul>
@@ -22,7 +22,7 @@
       </ul>
     </header>
     <main>
-      <section class="main_block">
+      <section class="main-block">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługę</button>
       </section>
@@ -87,7 +87,7 @@
           </li>
         </ul>
       </section>
-      <section class="our_team">
+      <section class="our-team">
         <h2>Nasz zespół</h2>
         <ul>
           <li>
